# avskrift

./: .gitignore  ARCHITECTURE.md  FINISH.md  HANDOVER.md  README.md  START.md  package-lock.json  package.json
.cargo/: config.toml
model-tools/: API-FIXES.md  build-gazetteers.py  build-pii-ner.ps1  convert.py  fetch-diarization.ps1  fetch-llm.ps1  fetch-summary.ps1  fetch-whisper.ps1  preflight.ps1
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: aec.rs  ai.rs  align.rs  audio.rs  capture.rs  diarize.rs  docio.rs  download.rs  engine.rs  jobs.rs  lib.rs  llm.rs  main.rs  models.rs  summarize.rs  transcribe.rs  transcript.rs
src-tauri/src/data/: diagnoser.txt  diagnoser_akronymer.txt  efternamn.txt  fornamn.txt  kommuner.txt  mediciner.txt  ortnamn.txt  skolor.txt
src-tauri/src/pii/: dictionary.rs  gazetteer.rs  merge.rs  mod.rs  model.rs  pseudonym.rs  rules.rs
src/routes/: +page.svelte
