[package]
name = "avskrift"
version = "0.1.3"
description = "Lokal transkribering, diarisering och avidentifiering av svenskt tal"
authors = ["Pluggentipsar"]
edition = "2021"

[lib]
# `_lib`-suffixet behövs för att lib-namnet inte ska krocka med bin-namnet på Windows.
name = "avskrift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# GPU-acceleration (valbart). Bygg med t.ex.
#   npm run tauri build -- --features cuda      (NVIDIA: Whisper + Qwen)
#   npm run tauri build -- --features metal     (Apple Silicon: Whisper + Qwen)
#   npm run tauri build -- --features vulkan    (plattformsoberoende GPU: Whisper)
# Default = CPU. Varje feature aktiverar matchande backend i både whisper-rs (tal->text) och
# llama-cpp-2 (Qwen-LLM-lagret). KB-BERT (NER via ort) kör alltid på CPU – se FINISH.md.
[features]
default = []
cuda = ["whisper-rs/cuda", "llama-cpp-2/cuda"]
metal = ["whisper-rs/metal", "llama-cpp-2/metal"]
vulkan = ["whisper-rs/vulkan", "llama-cpp-2/vulkan"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
aho-corasick = "1"
num_cpus = "1"

# --- Avidentifiering (NER via ort) ---
ort = "=2.0.0-rc.12"
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
docx-rs = "0.4"

# --- Lokala LLM-lager (PII "Övrigt" + sammanfattning): Qwen GGUF via llama.cpp ---
# Ersatte candle (likvärdig kvalitet, men långsammare på CPU). `dynamic-link` bygger llama.cpp + dess
# ggml som egna DLL:er så de inte krockar vid länkning med whisper.cpp:s statiska ggml (LNK2005).
llama-cpp-2 = { version = "0.1.146", features = ["dynamic-link"] }

# --- Tal -> text ---
# whisper.cpp-bindningar. KB-Whisper konverteras till GGML/GGUF och läses härifrån.
# OBS: pinna mot en konkret version och verifiera API:t vid första bygget – se FINISH.md.
whisper-rs = "0.14"

# --- Diarisering (pyannote-segmentering + talar-embeddings via ONNX) ---
# sherpa-onnx-bindningar; kör hela diariserings-pipen i ren Rust/ONNX (samma ort-tänk).
sherpa-rs = "0.6"

# --- Ljudavkodning -> 16 kHz mono f32 (ingen extern FFmpeg) ---
symphonia = { version = "0.5", features = [
    "mp3", "aac", "isomp4", "alac", "flac", "ogg", "vorbis", "wav", "pcm",
] }
rubato = "0.15"

# On-demand download of Whisper models (small, blocking HTTP client).
ureq = "2"

# Optimera beroenden även i dev-bygget så lokal inferens är användbar under `tauri dev`.
# Vår egen krate förblir ooptimerad för snabba, felsökbara ombyggen.
[profile.dev.package."*"]
opt-level = 3

[target."cfg(windows)".dependencies]
# Mötesinspelning: två WASAPI-strömmar (mic = eCapture, möte = eRender loopback).
wasapi = "0.23.0"
# WAV-skrivning för mötets två källspår (16-bit PCM mono, native rate; resamplas vid inläsning).
hound = "3.5"
